# python-polars-the-definitive-guide

./: Makefile  appendix1.ipynb  bootstrap  ch01.ipynb  ch02.ipynb  ch03.ipynb  ch04.ipynb  ch05.ipynb  ch06.ipynb  ch07.ipynb  ch08.ipynb  ch09.ipynb  ch10.ipynb  ch11.ipynb  ch12.ipynb  ch13.ipynb  ch14.ipynb  ch15.ipynb  ch16.ipynb  ch17.ipynb  ch18.ipynb  pyproject.toml  setup  setup.md
