[project]
name = "python-polars-the-definitive-guide"
version = "1.0.0"
requires-python = "==3.12.*"
description = "Python Polars: The Definitive Guide"
readme = "README.md"
authors = [
    { name = "Jeroen Janssens", email = "jeroen@jeroenjanssens.com" },
    { name = "Thijs Nieuwdorp", email = "thijsnieuwdorp@hotmail.com" }
]
dependencies = [
    "altair==5.5.0",
    "chardet==5.2.0",
    "datashader==0.17.0",
    "geoviews==1.14.0",
    "great-tables==0.16.1",
    "hvplot==0.11.2",
    "jupyter-bokeh==4.0.5",
    "jupyterlab==4.3.5",
    "lxml==5.3.0",
    "maturin==1.8.2",
    "patchelf==0.17.2.1 ; sys_platform == 'linux'",
    "pip==25.0",
    "plotnine[all]==0.14.5",
    "polars[all]==1.20.0",
    "pyarrow==19.0.0",
    "scikit-learn==1.6.1",
    "scipy==1.15.1",
    "textblob==0.19.0",
    "vegafusion[embed]==1.6.9",
    "vl-convert-python==1.7.0",
]
